--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,13 @@
 
 [env:ttgo-t-beam]
 platform = espressif32
-board = ttgo-t-beam
+#board = ttgo-t-beam
+board = ttgo-lora32-v21
 framework = arduino
 lib_deps = 
 	RadioLib
 	platformio/Streaming@0.0.0-alpha+sha.5
+	locoduino/RingBuffer@^1.0.3
 monitor_speed = 115200
 upload_port = /dev/ttyUSB0
 test_ignore = test_desktop
